Fix Landing overflow layout

--- a/css/main.css
+++ b/css/main.css
@@ -318,7 +318,7 @@ header .container .links li a {
 	width: 100%;
 	height: 100vh;
 	background-color: var(--main-color);
-	overflow-x: hidden;
+	overflow: hidden;
 }
 .landing .intro-text {
 	position: absolute;
